Add auth session flow
